grpc-gateway converted to use gRPC with REST gateway
